drkns 13.05.2017 11:11:40 +0000 - build 4957

1. 0003430: Ошибка повышения привилегий в Far 3.0.4949

drkns 11.05.2017 00:06:47 +0000 - build 4956

1. 0003433: Если выполненная программа поменяла заголовок консоли, Far его не восстановит

2. Пара мелочей.

drkns 09.05.2017 22:40:36 +0000 - build 4955

1. Уточнение 4950 - падало на сообщениях без строк.

drkns 06.05.2017 21:45:46 +0000 - build 4954

1. Уточнение 4945.

drkns 05.05.2017 00:31:34 +0000 - build 4953

1. Уточнение 4952.

drkns 04.05.2017 20:45:42 +0000 - build 4952

1. Рефакторинг.

drkns 03.05.2017 00:02:38 +0000 - build 4951

1. Уточнение 4950.

drkns 02.05.2017 23:55:28 +0000 - build 4950

1. Немного сократим копирование данных в Message().

zg 02.05.2017 16:38:35 +0200 - build 4949

1. уточнение 4945: не работала команда if exist.

drkns 01.05.2017 22:42:32 +0000 - build 4948

1. Уточнение 4945.

zg 01.05.2017 16:49:59 +0200 - build 4947

1. уточнение 4945: в командной строке и в строках редактирования не работал CtrlEnd при отключённом автодополнении.

zg 01.05.2017 16:05:46 +0200 - build 4946

1. уточнение 4945: в редакторе не работал регистронезависимый поиск.

drkns 01.05.2017 00:21:40 +0000 - build 4945

1. Рефакторинг.

drkns 27.04.2017 20:58:46 +0000 - build 4944

1. Убираем пробелы при обработке pushd.

2. Более корректно убираем кавычки при обработке set.

zg 25.04.2017 12:59:57 +0200 - build 4943

1. исключение при вызове mf.fsplit('a.:',0x4+0x8)

drkns 24.04.2017 07:59:10 +0000 - build 4942

1. Уточнение 4940 ещё раз.

drkns 23.04.2017 22:24:28 +0000 - build 4941

1. Уточнение 4936.

2. Уточнение 4940.

3. Рефакторинг.

drkns 23.04.2017 15:52:18 +0000 - build 4940

1. 0003216: Клавиша Shift игнорируется в диалогах при включённой настройке автозавершения "Подставлять первый подходящий вариант"

drkns 22.04.2017 20:39:26 +0000 - build 4939

1. Уточнение 4938.

2. Рефакторинг.

drkns 22.04.2017 14:04:11 +0000 - build 4938
