@@ -1,3 +1,7 @@
+drkns 13.05.2017 20:07:39 +0000 - build 4958
+
+1. Поправим погнутую сортировку.
+
 drkns 13.05.2017 11:11:40 +0000 - build 4957
 
 1. 0003430: Ошибка повышения привилегий в Far 3.0.4949
